--- a/1.Fundamentos de Python/1.Python.ipynb
+++ b/1.Fundamentos de Python/1.Python.ipynb
@@ -163,7 +163,95 @@
    "metadata": {},
    "source": [
     "### Fecha y hora\n",
-    "### Conversiones"
+    "Manejo de fechas y horas en Python\n",
+    "\n",
+    "Python ofrece el módulo **datetime** para trabajar con fechas y horas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "907dff85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fecha: 2025-10-02 01:02:15.402705\n",
+      "Ejemplo 1 - Fecha y hora actual: 2025-10-02 01:02:15.402705\n",
+      "Ejemplo 2 - Fecha simple: 2024-06-01\n",
+      "Ejemplo 3 - Hora simple: 14:30:00\n",
+      "Ejemplo 4 - Fecha formateada: 02/10/2025 01:02:15\n",
+      "Ejemplo 5 - Fecha parseada: 2024-06-01 15:45:00\n",
+      "Ejemplo 6 - Mañana: 2025-10-03 01:02:15.402705\n",
+      "Ejemplo 6 - Ayer: 2025-10-01 01:02:15.402705\n",
+      "Ejemplo 7 - Diferencia de días: 9\n",
+      "Ejemplo 8 - Solo fecha: 2025-10-02\n",
+      "Ejemplo 8 - Solo hora: 01:02:15.402705\n",
+      "Ejemplo 9 - Fecha y hora en CDMX: 2025-10-01 22:02:15.413207-06:00\n",
+      "Ejemplo 9 - Fecha y hora en Santiago: 2025-10-02 01:02:15.422991-03:00\n",
+      "Ejemplo 10 - 2024-06-01 es anterior a 2024-06-10\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, date, time, timedelta\n",
+    "import pytz\n",
+    "\n",
+    "# Ejemplo 1: Obtener la fecha y hora actual\n",
+    "ahora = datetime.now()\n",
+    "print(f\"Fecha: {ahora}\")\n",
+    "print(\"Ejemplo 1 - Fecha y hora actual:\", ahora)\n",
+    "\n",
+    "# Ejemplo 2: Crear un objeto fecha\n",
+    "fecha_simple = date(2024, 6, 1)\n",
+    "print(\"Ejemplo 2 - Fecha simple:\", fecha_simple)\n",
+    "\n",
+    "# Ejemplo 3: Crear un objeto hora\n",
+    "hora_simple = time(14, 30, 0)\n",
+    "print(\"Ejemplo 3 - Hora simple:\", hora_simple)\n",
+    "\n",
+    "# Ejemplo 4: Formatear fechas a string\n",
+    "formateada = ahora.strftime(\"%d/%m/%Y %H:%M:%S\")\n",
+    "print(\"Ejemplo 4 - Fecha formateada:\", formateada)\n",
+    "\n",
+    "# Ejemplo 5: Parsear string a fecha\n",
+    "fecha_str = \"2024-06-01 15:45:00\"\n",
+    "fecha_parseada = datetime.strptime(fecha_str, \"%Y-%m-%d %H:%M:%S\")\n",
+    "print(\"Ejemplo 5 - Fecha parseada:\", fecha_parseada)\n",
+    "\n",
+    "# Ejemplo 6: Sumar y restar días con timedelta\n",
+    "manana = ahora + timedelta(days=1)\n",
+    "ayer = ahora - timedelta(days=1)\n",
+    "print(\"Ejemplo 6 - Mañana:\", manana)\n",
+    "print(\"Ejemplo 6 - Ayer:\", ayer)\n",
+    "\n",
+    "# Ejemplo 7: Diferencia entre dos fechas\n",
+    "fecha1 = datetime(2024, 6, 1)\n",
+    "fecha2 = datetime(2024, 6, 10)\n",
+    "diferencia = fecha2 - fecha1\n",
+    "print(\"Ejemplo 7 - Diferencia de días:\", diferencia.days)\n",
+    "\n",
+    "# Ejemplo 8: Obtener solo la fecha o la hora de un datetime\n",
+    "solo_fecha = ahora.date()\n",
+    "solo_hora = ahora.time()\n",
+    "print(\"Ejemplo 8 - Solo fecha:\", solo_fecha)\n",
+    "print(\"Ejemplo 8 - Solo hora:\", solo_hora)\n",
+    "\n",
+    "# Ejemplo 9: Trabajar con zonas horarias (requiere módulo pytz)\n",
+    "zona = pytz.timezone(\"America/Mexico_City\")\n",
+    "zona_stgo = pytz.timezone(\"America/Santiago\")\n",
+    "ahora_mx = datetime.now(zona)\n",
+    "ahora_stgo = datetime.now(zona_stgo)\n",
+    "print(\"Ejemplo 9 - Fecha y hora en CDMX:\", ahora_mx)\n",
+    "print(\"Ejemplo 9 - Fecha y hora en Santiago:\", ahora_stgo)\n",
+    "\n",
+    "# Ejemplo 10: Comparar fechas\n",
+    "if fecha1 < fecha2:\n",
+    "    print(f\"Ejemplo 10 - {fecha1.date()} es anterior a {fecha2.date()}\")\n",
+    "else:\n",
+    "    print(f\"Ejemplo 10 - {fecha1.date()} es posterior o igual a {fecha2.date()}\")"
    ]
   },
   {
