--- a/1.Fundamentos de Python/0.Introduccion.md
+++ b/1.Fundamentos de Python/0.Introduccion.md
@@ -1,9 +1,9 @@
 # Historia de la Creación y Evolución del Lenguaje Python
 
 ## El Contexto Tecnológico y Personal: La Génesis de un Lenguaje Revolucionario
-El origen de Python no se remonta a una gran conferencia o una iniciativa corporativa, sino a un proyecto personal emprendido por el programador holandés Guido van Rossum en el corazón de los Países Bajos. A finales de la década de 1980, el panorama de la informática estaba dominado por lenguajes de alto rendimiento como C y Fortran, que eran poderosos pero a menudo difíciles de leer y escribir para tareas de scripting o prototipado rápido. Por otro lado, existían lenguajes más amigables para principiantes, pero a menudo con limitaciones significativas en flexibilidad o potencia. Este era el vacío que Guido van Rossum buscaba llenar. El desarrollo comenzó oficialmente en diciembre de 1989, cuando, durante las vacaciones navideñas, decidió crear un intérprete para un nuevo lenguaje de scripting que sirviera como sucesor directo del lenguaje ABC. Su objetivo declarado era diseñar un lenguaje que fuera fácil de leer y usar, apelando especialmente a los desarrolladores experimentados con Unix/C.
+El origen de Python no se remonta a una gran conferencia o una iniciativa corporativa, sino a un proyecto personal emprendido por el programador holandés [Guido van Rossum](https://es.wikipedia.org/wiki/Guido_van_Rossum) en el corazón de los Países Bajos. A finales de la década de 1980, el panorama de la informática estaba dominado por lenguajes de alto rendimiento como C y Fortran, que eran poderosos pero a menudo difíciles de leer y escribir para tareas de scripting o prototipado rápido. Por otro lado, existían lenguajes más amigables para principiantes, pero a menudo con limitaciones significativas en flexibilidad o potencia. Este era el vacío que Guido van Rossum buscaba llenar. El desarrollo comenzó oficialmente en diciembre de 1989, cuando, durante las vacaciones navideñas, decidió crear un intérprete para un nuevo lenguaje de scripting que sirviera como sucesor directo del lenguaje ABC. Su objetivo declarado era diseñar un lenguaje que fuera fácil de leer y usar, apelando especialmente a los desarrolladores experimentados con Unix/C.
 
-La institución detrás de este nacimiento fue el Centrum Wiskunde & Informatica (CWI), Instituto Nacional de Investigación en Matemáticas y Ciencias de la Computación, ubicado en Ámsterdam. Van Rossum trabajaba allí como investigador, y el CWI se convirtió en el ecosistema natural para el crecimiento inicial de Python. No obstante, el contexto tecnológico de la época fue fundamental. Los sistemas operativos Unix y sus herramientas de scripting estaban ganando terreno, lo que creaba una demanda urgente de un lenguaje que pudiera integrarse bien en ese entorno pero sin las complejidades inherentes a C. Python fue concebido originalmente para el sistema operativo Amoeba, un sistema operativo distribuido que también se desarrollaba en el CWI, lo que demuestra un enfoque desde el principio en problemas de software modernos.
+La institución detrás de este nacimiento fue el [Centrum Wiskunde & Informatica](https://www.cwi.nl/en/) (CWI), Instituto Nacional de Investigación en Matemáticas y Ciencias de la Computación, ubicado en Ámsterdam. Van Rossum trabajaba allí como investigador, y el CWI se convirtió en el ecosistema natural para el crecimiento inicial de Python. No obstante, el contexto tecnológico de la época fue fundamental. Los sistemas operativos Unix y sus herramientas de scripting estaban ganando terreno, lo que creaba una demanda urgente de un lenguaje que pudiera integrarse bien en ese entorno pero sin las complejidades inherentes a C. Python fue concebido originalmente para el sistema operativo Amoeba, un sistema operativo distribuido que también se desarrollaba en el CWI, lo que demuestra un enfoque desde el principio en problemas de software modernos.
 
 Las influencias conceptuales que moldearon el pensamiento de Van Rossum fueron múltiples y diversas. El principal antecesor conceptual fue el lenguaje ABC, del cual él mismo había sido uno de los desarrolladores. Apreciaba mucho las características de ABC, como su sintaxis elegante y su enfoque en la legibilidad, pero se frustraba con su falta de extensibilidad; no era fácil para los usuarios añadir nuevas bibliotecas o adaptarlo a nuevos dominios. Esta esencia de "ABC mejorado" se convirtió en el núcleo de la visión de Python. Sin embargo, Van Rossum no se limitó a ABC. También se inspiró profundamente en otros lenguajes de la época, cada uno contribuyendo con piezas clave a la arquitectura final de Python. Del lenguaje de programación C heredó la sintaxis básica para expresiones y estructuras de control, así como un enfoque pragmático en la eficiencia. De Modula-3 tomó prestado el concepto de módulos y su modelo de excepciones, que luego se extendió con la cláusula `else` para ofrecer más control. Las funciones de orden superior `map`, `filter` y `reduce` fueron incorporadas a la versión 1.0 gracias a una contribución externa de Amrit Prem. Otros lenguajes como Lisp le influyeron en su tratamiento de las listas y las expresiones lambda, mientras que Perl y Java introdujeron conceptos de expresiones regulares y orientación a objetos más maduros. Incluso la filosofía UNIX tuvo su eco en los principios fundamentales del lenguaje.
 
