--- a/1.Fundamentos de Python/6.modulos.ipynb
+++ b/1.Fundamentos de Python/6.modulos.ipynb
@@ -238,7 +238,199 @@
     "```\n",
     "\n",
     "### c) Escribir pruebas unitarias (recomendado para proyectos serios):\n",
-    "Crea un archivo `test_matematicas.py` usando `unittest` o `pytest`.\n",
+    "Crea un archivo `test_matematicas.py` usando `unittest` o `pytest`.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6546829",
+   "metadata": {},
+   "source": [
+    "### Prueba Unitaria para matematicas.py con pytest\n",
+    "A continuación se presenta un archivo de prueba unitaria completo para el módulo \"matematicas.py\" descrito anteriormente, utilizando el framework **pytest**, que es uno de los más populares y recomendados en la comunidad Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4364fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test_matematicas.py\n",
+    "\"\"\"\n",
+    "Pruebas unitarias para el módulo matematicas.py.\n",
+    "Este archivo contiene pruebas para las funciones:\n",
+    "- potencia\n",
+    "- raiz_cuadrada\n",
+    "- factorial\n",
+    "Se utiliza pytest como framework de pruebas.\n",
+    "\"\"\"\n",
+    "import pytest\n",
+    "from matematicas import potencia, raiz_cuadrada, factorial, PI, E\n",
+    "\n",
+    "# === Pruebas para la función potencia ===\n",
+    "\n",
+    "def test_potencia_base_positiva():\n",
+    "    \"\"\"Prueba potencia con base y exponente positivos.\"\"\"\n",
+    "    assert potencia(2, 3) == 8\n",
+    "    assert potencia(5, 2) == 25\n",
+    "\n",
+    "def test_potencia_exponente_cero():\n",
+    "    \"\"\"Prueba que cualquier número (excepto 0) elevado a 0 es 1.\"\"\"\n",
+    "    assert potencia(10, 0) == 1\n",
+    "    assert potencia(-3, 0) == 1\n",
+    "\n",
+    "def test_potencia_exponente_negativo():\n",
+    "    \"\"\"Prueba potencia con exponente negativo.\"\"\"\n",
+    "    assert potencia(2, -2) == 0.25  # 1 / (2^2)\n",
+    "    assert potencia(10, -1) == 0.1\n",
+    "\n",
+    "def test_potencia_base_cero():\n",
+    "    \"\"\"Prueba potencia con base cero.\"\"\"\n",
+    "    assert potencia(0, 5) == 0\n",
+    "    assert potencia(0, 0) == 1  # Por definición en Python: 0**0 = 1\n",
+    "\n",
+    "# === Pruebas para la función raiz_cuadrada ===\n",
+    "\n",
+    "def test_raiz_cuadrada_numero_positivo():\n",
+    "    \"\"\"Prueba raíz cuadrada de números positivos.\"\"\"\n",
+    "    assert raiz_cuadrada(16) == 4.0\n",
+    "    assert raiz_cuadrada(25) == 5.0\n",
+    "    assert raiz_cuadrada(2) == pytest.approx(1.41421356237, rel=1e-9)\n",
+    "\n",
+    "\n",
+    "def test_raiz_cuadrada_cero():\n",
+    "    \"\"\"Prueba raíz cuadrada de cero.\"\"\"\n",
+    "    assert raiz_cuadrada(0) == 0.0\n",
+    "\n",
+    "\n",
+    "def test_raiz_cuadrada_numero_negativo():\n",
+    "    \"\"\"Prueba que se lanza ValueError al intentar raíz de número negativo.\"\"\"\n",
+    "    with pytest.raises(ValueError, match=\"No se puede calcular la raíz cuadrada de un número negativo.\"):\n",
+    "        raiz_cuadrada(-4)\n",
+    "\n",
+    "    with pytest.raises(ValueError):\n",
+    "        raiz_cuadrada(-0.1)\n",
+    "\n",
+    "\n",
+    "# === Pruebas para la función factorial ===\n",
+    "\n",
+    "def test_factorial_cero():\n",
+    "    \"\"\"Prueba que 0! = 1.\"\"\"\n",
+    "    assert factorial(0) == 1\n",
+    "\n",
+    "\n",
+    "def test_factorial_positivo():\n",
+    "    \"\"\"Prueba factorial de números enteros positivos.\"\"\"\n",
+    "    assert factorial(1) == 1\n",
+    "    assert factorial(5) == 120\n",
+    "    assert factorial(3) == 6\n",
+    "\n",
+    "\n",
+    "def test_factorial_numero_negativo():\n",
+    "    \"\"\"Prueba que se lanza ValueError al calcular factorial de número negativo.\"\"\"\n",
+    "    with pytest.raises(ValueError, match=\"El factorial no está definido para números negativos.\"):\n",
+    "        factorial(-1)\n",
+    "\n",
+    "    with pytest.raises(ValueError):\n",
+    "        factorial(-10)\n",
+    "\n",
+    "\n",
+    "def test_factorial_tipo_invalido():\n",
+    "    \"\"\"Prueba que se manejan correctamente tipos no enteros (opcional, dependiendo de la implementación).\"\"\"\n",
+    "    # Nota: En la implementación actual usando math.factorial, esto lanzará TypeError.\n",
+    "    # Si deseas que tu función maneje esto explícitamente, deberías ajustar matematicas.py.\n",
+    "    with pytest.raises(TypeError):\n",
+    "        factorial(3.5)\n",
+    "\n",
+    "\n",
+    "# === Pruebas para constantes ===\n",
+    "\n",
+    "def test_constantes():\n",
+    "    \"\"\"Verifica que las constantes tengan valores razonables.\"\"\"\n",
+    "    import math\n",
+    "    assert PI == math.pi\n",
+    "    assert E == math.e\n",
+    "    assert PI > 3.14\n",
+    "    assert E > 2.71"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b95039d5",
+   "metadata": {},
+   "source": [
+    "### Cómo ejecutar las pruebas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29648589",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Instalar pytest (si no está instalado):\n",
+    "pip install pytest\n",
+    "\n",
+    "# 2. Estructura del proyecto:\n",
+    "#tu_proyecto/\n",
+    "#├── matematicas.py\n",
+    "#└── test_matematicas.py\n",
+    "\n",
+    "# 3. Ejecutar las pruebas:\n",
+    "# Desde la terminal, en el directorio que contiene ambos archivos:\n",
+    "#\n",
+    "pytest\n",
+    "#para ver más detalles:\n",
+    "pytest -v\n",
+    "# para ejecutar solo este archivo:\n",
+    "pytest test_matematicas.py -v\n",
+    "#Salida esperada (resumida):\n",
+    "\n",
+    "============================= test session starts ==============================\n",
+    "collected 14 items\n",
+    "\n",
+    "test_matematicas.py::test_potencia_base_positiva PASSED\n",
+    "test_matematicas.py::test_potencia_exponente_cero PASSED\n",
+    "test_matematicas.py::test_potencia_exponente_negativo PASSED\n",
+    "test_matematicas.py::test_potencia_base_cero PASSED\n",
+    "test_matematicas.py::test_raiz_cuadrada_numero_positivo PASSED\n",
+    "test_matematicas.py::test_raiz_cuadrada_cero PASSED\n",
+    "test_matematicas.py::test_raiz_cuadrada_numero_negativo PASSED\n",
+    "test_matematicas.py::test_factorial_cero PASSED\n",
+    "test_matematicas.py::test_factorial_positivo PASSED\n",
+    "test_matematicas.py::test_factorial_numero_negativo PASSED\n",
+    "test_matematicas.py::test_factorial_tipo_invalido PASSED\n",
+    "test_matematicas.py::test_constantes PASSED\n",
+    "============================== 12 passed in 0.02s =============================="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a13ab020",
+   "metadata": {},
+   "source": [
+    "⚠️ **Nota sobre test_factorial_tipo_invalido:**\n",
+    "\n",
+    "La función math.factorial() (usada en matematicas.py) lanza TypeError si recibe un flotante, incluso si es entero (ej. 3.0). Si deseas que tu función acepte flotantes enteros (como 3.0), deberías modificar matematicas.py para convertirlos a int. En ese caso, ajustarías esta prueba. \n",
+    "\n",
+    "**Características de estas pruebas**\n",
+    "\n",
+    "- ✅ **Nombres descriptivos**: Cada función de prueba describe claramente qué se está probando.\n",
+    "- ✅ **Cobertura de casos límite**: Se prueban valores extremos (0, negativos, exponentes negativos).\n",
+    "- ✅ **Manejo de excepciones**: Se verifica que se lancen las excepciones esperadas con pytest.raises().\n",
+    "- ✅ **Precisión numérica**: Se usa pytest.approx() para comparar números de punto flotante.\n",
+    "- ✅ **Aislamiento**: Cada prueba es independiente y no depende del estado de otras.\n",
+    "- ✅ **Cumple con convenciones**: Los archivos de prueba comienzan con test_ y las funciones también."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbeb5e6a",
+   "metadata": {},
+   "source": [
     "\n",
     "---\n",
     "\n",
